--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
+    "build:prod": "ng build  --aot --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --output-path angularapp  --aot --prod"
+    "postinstall": "npm run build:prod"
   },
   "engines": {
     "node": "~10.15.0",
