--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ speed-measure-plugin.json
 # misc
 /.sass-cache
 /connect.lock
-/coverage
+# /coverage
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
